--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,41 @@
   text-align: center;
 }
 
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+}
+
+.iconSearch {
+  margin: 10px;
+  transform: scale(1.5);
+}
+
+.input {
+  padding: 5px 15px 5px 7px;
+  border-radius: 7px;
+  border-width: 1px;
+}
+
+.valide {
+  margin: 5px;
+  padding: 7px 12px;
+  border-radius: 7px;
+  border-style: none;
+  background-color: rgb(0, 172, 235);
+  color: whitesmoke;
+  cursor: pointer;
+}
+
+.valide:hover {
+  background-color: rgb(0, 119, 162);
+}
+
+.cardRobots {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
