--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,72 @@
 .App {
   text-align: center;
+  z-index: 0;
+}
+
+.burgerIcon {
+  height: 20px;
+  width: 20px;
+  position: fixed;
+  margin: 40px 0 30px 140px;
+  padding-top: 15px;
+  cursor: pointer;
+  z-index: 15;
+}
+
+.burgerIcon div {
+  height: 2px;
+  width: 25px;
+  background-color: whitesmoke;
+  border-radius: 20px;
+}
+
+.burgerIcon:hover {
+  opacity: 0.7;
+}
+
+.line1 {
+  transform: translateY(-5px);
+  transition: 0.2s ease-in-out;
+}
+
+.first {
+  transform: translateY(0.5px) rotateZ(135deg);
+  transition: 0.2s ease-in-out;
+}
+
+.second {
+  display: none;
+}
+
+.line3 {
+  transform: translateY(5px);
+  transition: 0.2s ease-in-out;
+}
+
+.third {
+  transform: translateY(-0.5px) rotateZ(-135deg);
+  transition: 0.2s ease-in-out;
+}
+
+.mainTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.controllerIcon {
+  height: 60px;
+  width: 60px;
+  margin: 0 20px;
+  color: #d8130c;
+}
+
+.titleRobot .robotColor {
+  color: #d8130c;
+}
+
+.titleRobot {
+  color: whitesmoke;
 }
 
 .search {
@@ -7,31 +74,88 @@
   align-items: center;
   justify-content: center;
   margin: 10px;
+  height: 2.5rem;
+}
+
+.input-wrapper {
+  background-color: rgb(29, 29, 29);
+  border: solid;
+  border-color: rgb(91, 91, 91);
+  height: 95%;
+  width: 25rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 45px 0 0 45px;
+  border-width: thin;
 }
 
 .iconSearch {
-  margin: 10px;
+  margin: 0;
+  padding: 0 10px 0 20px;
   transform: scale(1.5);
+  color: white;
+  opacity: 0.3;
 }
 
-.input {
-  padding: 5px 15px 5px 7px;
-  border-radius: 7px;
-  border-width: 1px;
-}
-
-.valide {
-  margin: 5px;
-  padding: 7px 12px;
-  border-radius: 7px;
-  border-style: none;
-  background-color: rgb(0, 172, 235);
+.closeIcon {
+  transform: scale(2.4);
   color: whitesmoke;
+  opacity: 0.3;
+  padding-right: 10px;
   cursor: pointer;
 }
 
+.closeIcon:hover {
+  opacity: 0.7;
+  transform: scale(2.5);
+}
+
+.iconSearchWhite {
+  margin: 10px;
+  transform: scale(1.5);
+  color: whitesmoke;
+}
+
+.inactive {
+  display: none;
+}
+
+.input {
+  font-size: 15px;
+  padding: 6px 15px 6px 7px;
+  border-radius: 7px;
+  border-width: 1px;
+  border-style: none;
+  background-color: transparent;
+  height: 100%;
+  width: 100%;
+  color: whitesmoke;
+}
+
+.input:focus {
+  outline: none;
+}
+
+.valide {
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+  height: 100%;
+  margin: 0;
+  padding: 0 15px;
+  border-radius: 0 45px 45px 0;
+  border-style: none;
+  background-color: rgb(51, 51, 51);
+  color: whitesmoke;
+  cursor: pointer;
+  border: solid;
+  border-color: rgb(91, 91, 91);
+  border-width: thin;
+}
+
 .valide:hover {
-  background-color: rgb(0, 119, 162);
+  background-color: rgb(70, 70, 70);
 }
 
 .cardRobots {
