--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   height: 20px;
   width: 20px;
   position: fixed;
-  margin: 40px 0 30px 140px;
+  margin: 40px 0 30px 162px;
   padding-top: 15px;
   cursor: pointer;
   z-index: 15;
@@ -77,6 +77,30 @@
   height: 2.5rem;
 }
 
+.microButton {
+  margin: 0 0 0 10px;
+  padding: 0;
+  border-style: none;
+  background-color: rgb(51, 51, 51);
+  color: whitesmoke;
+  cursor: pointer;
+  border: solid;
+  border-color: rgb(91, 91, 91);
+  border-width: thin;
+  border-radius: 50%;
+}
+
+.microButton:hover {
+  background-color: rgb(70, 70, 70);
+}
+
+.micro {
+  margin: 0;
+  padding: 9px 11px;
+  font-size: 18px;
+  color: whitesmoke;
+}
+
 .input-wrapper {
   background-color: rgb(29, 29, 29);
   border: solid;
@@ -94,7 +118,7 @@
   margin: 0;
   padding: 0 10px 0 20px;
   transform: scale(1.5);
-  color: white;
+  color: whitesmoke;
   opacity: 0.3;
 }
 
