--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 30%;
+    width: 350px;
     height: 100vh;
     z-index: 10;
     transform: translateX(-100%);
