--- a/src/components/robotCard.css
+++ b/src/components/robotCard.css
@@ -2,15 +2,15 @@
     position: relative;
     border-style: solid;
     border-color: black;
-    border-radius: 30px;
+    border-radius: 20px;
     padding: 20px;
     margin: 10px;
     background-color: rgb(229, 229, 229);
 }
 
 .robotCard:hover {
-    transform: scale(1.01);
-    transition: 0.1s ease-in-out;
+    transition: 0.2s ease-in-out;
+    border-radius: 0;
 }
 
 .name {
@@ -23,20 +23,53 @@
 
 .showButton {
     margin: 10px;
-    padding: 10px 15px;
-    border-radius: 7px;
+    padding: 13px 18px;
+    border-radius: 45px;
     border-style: none;
-    background-color: rgb(63, 63, 63);
-    color: whitesmoke;
+    background-color: transparent;
+    color: transparent;
     cursor: pointer;
 }
 
-.showButton:hover {
-    background-color: rgb(85, 85, 85);
+.ok {
+    margin: 10px;
+    padding: 13px 18px;
+    border-radius: 45px;
+    border-style: none;
+    background-color: rgb(29, 29, 29);
+    color: whitesmoke;
+    cursor: pointer;
+    transition: 0.2s ease;
 }
+
+.showButton:hover {
+    background-color: rgb(100, 100, 100);
+}
+
 
 .thumbsButtons {
     position: absolute;
     top: 15px;
     right: 15px;
+}
+
+.threePoint {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-size: 25px;
+    padding: 8px;
+    margin: 0 30px 32px 0;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.threePoint:hover {
+    background-color: rgb(209, 209, 209);
+}
+
+.options {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
